fixed problems with menu events overlapping

--- a/loaderAnims.css
+++ b/loaderAnims.css
@@ -16,6 +16,7 @@
 * {
     margin: 0;
     transition: background-color 1s, box-shadow 1s;
+    
 }
 
 body {
@@ -53,11 +54,22 @@ body {
     left: -25px;
     box-shadow: 5px 5px 5px var(--shadow-color);
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
     transition: left 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55), box-shadow 1s, transform 0.5s, padding 0.5s;
     z-index: 3;
     transform: translateY(0);
+}
+
+#homeIcon {
+    display: none;
+    fill: #d0d0dc;
+    width: 90%;
+    opacity: 0;
+    transition: opacity 0.5s;
+    position: absolute;
+    top: 20px;
 }
 
 #menuIcon {
@@ -65,7 +77,6 @@ body {
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
-    position: absolute;
     width: 100%;
     aspect-ratio: 1.3/1;
     border-radius: 100%;
